--- a/.github/workflows/deploy_pgpool.yaml
+++ b/.github/workflows/deploy_pgpool.yaml
@@ -1,36 +1,26 @@
 name: Deploy pgpool with master slaves cluster
 
+
 on:
   push:
     branches:
-      - master
+    - master
 
 jobs:
-  deploy-services:
-    name: Deploy services
+  build:
     runs-on: ubuntu-latest
     container: 'centos:latest'
-
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v1
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install ansible==2.9.2 requests
 
-
-      - name: Install python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.7"
-
-      - name: Check python3 version
-        run: python3 --version
-
-      - name: Install ansible with pip3
-        run: |
-          pip3 install ansible
-          ansible --version | grep "python version"
-
-      - name: Run deploy_pgpool playbook
-        uses: dawidd6/action-ansible-playbook@v2.2.0
-        with:
-          playbook: main.yml
-          directory: ./
+    - name: run exporters playbook
+      run: |
+        ansible-playbook -i hosts/inventory.ini main.yml
