--- a/.github/workflows/deploy_pgpool.yaml
+++ b/.github/workflows/deploy_pgpool.yaml
@@ -18,8 +18,7 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install ansible==2.9.2 requests
+        yum install ansible
 
     - name: run exporters playbook
       run: |
