--- a/.github/workflows/deploy_pgpool.yaml
+++ b/.github/workflows/deploy_pgpool.yaml
@@ -14,7 +14,17 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
-  
+      - name: Configure SSH
+        shell: bash
+        run: |
+          mkdir ~/.ssh
+          sudo chmod 700 ~/.ssh
+          echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
+          sudo chmod 600 ~/.ssh/id_rsa
+          echo "${{secrets.SSH_KNOWN_HOSTS}}" > ~/.ssh/known_hosts
+          sudo chmod 644 ~/.ssh/known_hosts
+
+
       - name: Install Python 3.7
         uses: actions/setup-python@v2
         with:
@@ -27,3 +37,30 @@ jobs:
         run: |
           pip3 install ansible
           ansible --version | grep "python version"
+
+      - name: Run deploy_services playbook
+        uses: dawidd6/action-ansible-playbook@v2.2.0
+        with:
+          playbook: main.yaml
+          directory: ./
+          key: ${{secrets.SSH_PRIVATE_KEY}}
+          inventory: |
+            [pgmaster]
+            35.234.144.249 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+
+            [pgpool]
+            35.189.117.201 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+
+            [pgslave1]
+            34.105.206.15 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+
+            [pgslave2]
+            35.197.200.64 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+
+            [common]
+            34.105.206.15 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+            35.197.200.64 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+            35.234.144.249 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+            35.189.117.201 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+          options: |
+            --verbose
