--- a/hosts/inventory.ini
+++ b/hosts/inventory.ini
@@ -1,18 +1,18 @@
 [pgmaster]
-<IP> ansible_connection=ssh ansible_user=CHANGEME
+35.234.144.249 ansible_connection=ssh ansible_user=pauliusgasp_vcs
 
 [pgpool]
-<IP> ansible_connection=ssh ansible_user=CHANGEME
+35.189.117.201 ansible_connection=ssh ansible_user=pauliusgasp_vcs
 
 [pgslave1]
-<IP> ansible_connection=ssh ansible_user=CHANGEME
+34.105.206.15 ansible_connection=ssh ansible_user=pauliusgasp_vcs
 
 [pgslave2]
-<IP> ansible_connection=ssh ansible_user=CHANGEME
+35.197.200.64 ansible_connection=ssh ansible_user=pauliusgasp_vcs
 
 [common]
-<IP> ansible_connection=ssh ansible_user=CHANGEME
-<IP> ansible_connection=ssh ansible_user=CHANGEME
-<IP> ansible_connection=ssh ansible_user=CHANGEME
-<IP> ansible_connection=ssh ansible_user=CHANGEME
+34.105.206.15 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+35.197.200.64 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+35.234.144.249 ansible_connection=ssh ansible_user=pauliusgasp_vcs
+35.189.117.201 ansible_connection=ssh ansible_user=pauliusgasp_vcs
 
